spacing issues

--- a/src/app/pages/view-obfuscation/view-obfuscation.component.scss
+++ b/src/app/pages/view-obfuscation/view-obfuscation.component.scss
@@ -40,7 +40,7 @@ tr.detail-row {
 .element-detail {
   overflow: hidden;
   display: flex;
-  margin-left: 88px !important;
+  // margin-left: 88px !important;
   flex-direction: column;
 }
 
